bootstrap/kind/petclinic-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic
  namespace: petclinic
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - petclinic.local
      secretName: petclinic-tls

  rules:
  - host: petclinic.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: petclinic
            port:
              number: 8080
